feat: create application
endpoint for starting case/creating application
